--- a/starting_kit/tutorial.ipynb
+++ b/starting_kit/tutorial.ipynb
@@ -708,6 +708,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "<a name='2'></a>\n",
     "# III - Test and Submission\n",
     "\n",
     "Here we present the `run.py` script. It is meant to mimick what is happenning on the CodaLab platform, i.e. the competition server. Let's say you worked on an algorithm and you are ready to test it before submitting it. More specifically, it will create your MetaLearner object, run the meta-fit method and evaluate your meta-algorithm on test episodes generated from the meta-test split. You can run the script command with the following arguments:\n",
