Link to instructions fixed

--- a/tutorial.ipynb
+++ b/tutorial.ipynb
@@ -316,7 +316,7 @@
         "\n",
         "1. Execute the following cell to install all the dependencies in your current session/environment.\n",
         "2. Follow [these instructions](https://github.com/DustinCarrion/cd-metadl/blob/main/optional_instructions/anaconda_config.md) to configure a conda environment.\n",
-        "3. Follow [these instructions]([./optional_instructions/docker_config.md](https://github.com/DustinCarrion/cd-metadl/blob/main/optional_instructions/docker_config.md)) to use docker.\n",
+        "3. Follow [these instructions](https://github.com/DustinCarrion/cd-metadl/blob/main/optional_instructions/docker_config.md) to use docker.\n",
         "\n",
         "**Note:** From the above list, you can follow any of the options, you do not have to follow all of them. Moreover, you just have to follow this process once, next time you access the tutorial, you can skip this section. "
       ]
