Restructure confidence estimation, add notebook
Refactor confidence, add information to tasks

--- a/cdmetadl/notebooks/confidence_estimation.ipynb
+++ b/cdmetadl/notebooks/confidence_estimation.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -14,12 +14,24 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Augmentation"
+    "# Confidence Estimation"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import pathlib\n",
+    "import cdmetadl\n",
+    "\n",
+    "PROJECT_DIR = pathlib.Path(cdmetadl.__file__).parent.parent"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -40,6 +52,16 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "import cdmetadl.dataset \n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "import cdmetadl.samplers\n",
     "\n",
     "n_way_sampler = cdmetadl.samplers.ValueSampler(value=5)\n",
@@ -49,10 +71,24 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import cdmetadl.helpers.general_helpers\n",
+    "\n",
+    "model_module = cdmetadl.helpers.general_helpers.load_module_from_path(PROJECT_DIR / \"baselines/maml/model.py\")\n",
+    "learner = model_module.MyLearner()\n",
+    "learner.load(PROJECT_DIR / \"output/tmp/training/maml/cross-domain/model\")\n",
+    "confidence_predictor = learner.fit(task.support_set)"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Standard Augmentation"
+    "## Pseudo Confidence Estimation"
    ]
   },
   {
@@ -61,24 +97,23 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "import cdmetadl.augmentation\n",
+    "import cdmetadl.confidence\n",
     "import cdmetadl.notebooks.helpers\n",
     "\n",
-    "standard_augmentor = cdmetadl.augmentation.StandardAugmentation(threshold=0.75, scale=1.0, keep_original_data=False)\n",
-    "augmented_set_standard = standard_augmentor.augment(task.support_set, conf_scores=[0.0, 1.0, 0.5, 0.75, 0.3])\n",
+    "confidence_estimator = cdmetadl.confidence.PseudoConfidenceEstimator()\n",
+    "confidence_scores = confidence_estimator.estimate(confidence_predictor, task.query_set)\n",
+    "print(confidence_scores)\n",
     "\n",
     "fig = cdmetadl.notebooks.helpers.show_images_grid_plotly(task.support_set)\n",
     "fig.update_layout(title='Original data')\n",
-    "fig.show()\n",
-    "fig = cdmetadl.notebooks.helpers.show_images_grid_plotly(augmented_set_standard)\n",
-    "fig.update_layout(title='Augmented data')"
+    "fig.show()"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Pseudo Augmenation"
+    "## Monte Carlo Dropout Confidence Estimation"
    ]
   },
   {
@@ -87,45 +122,16 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "import cdmetadl.augmentation\n",
+    "import cdmetadl.confidence\n",
     "import cdmetadl.notebooks.helpers\n",
     "\n",
-    "pseudo_augmentor = cdmetadl.augmentation.PseudoAugmentation(\n",
-    "    augmentation_set=task.query_set, threshold=0.75, scale=1.0, keep_original_data=False\n",
-    ")\n",
-    "augmented_set_pseudo = pseudo_augmentor.augment(task.support_set, conf_scores=[0.0, 1.0, 0.5, 0.75, 0.3])\n",
+    "confidence_estimator = cdmetadl.confidence.MCDropoutConfidenceEstimator()\n",
+    "confidence_scores = confidence_estimator.estimate(confidence_predictor, task.query_set)\n",
+    "print(confidence_scores)\n",
     "\n",
     "fig = cdmetadl.notebooks.helpers.show_images_grid_plotly(task.support_set)\n",
     "fig.update_layout(title='Original data')\n",
-    "fig.show()\n",
-    "fig = cdmetadl.notebooks.helpers.show_images_grid_plotly(augmented_set_pseudo)\n",
-    "fig.update_layout(title='Pseudo Augmented data')"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "## Generative Augmentation"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "import cdmetadl.augmentation\n",
-    "import cdmetadl.notebooks.helpers\n",
-    "\n",
-    "generative_augmentor = cdmetadl.augmentation.GenerativeAugmentation(threshold=0.75, scale=1.0, keep_original_data=False)\n",
-    "augmented_set_generative = generative_augmentor.augment(task.support_set, conf_scores=[0.0, 1.0, 0.5, 0.75, 0.3])\n",
-    "\n",
-    "fig = cdmetadl.notebooks.helpers.show_images_grid_plotly(task.support_set)\n",
-    "fig.update_layout(title='Original data')\n",
-    "fig.show()\n",
-    "fig = cdmetadl.notebooks.helpers.show_images_grid_plotly(augmented_set_generative)\n",
-    "fig.update_layout(title='Generative Augmented data')"
+    "fig.show()"
    ]
   }
  ],
