--- a/cdmetadl/notebooks/diffusion_augmentation_APL.ipynb
+++ b/cdmetadl/notebooks/diffusion_augmentation_APL.ipynb
@@ -2,9 +2,18 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 17,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "The autoreload extension is already loaded. To reload it, use:\n",
+      "  %reload_ext autoreload\n"
+     ]
+    }
+   ],
    "source": [
     "%load_ext autoreload\n",
     "%autoreload 2\n",
@@ -13,16 +22,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [],
    "source": [
-    "path_to_dataset = \"../../public_data\""
+    "path_to_dataset = \"/fastdata/vilab24/meta-album\""
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -32,14 +41,14 @@
     "import cdmetadl.dataset\n",
     "\n",
     "dataset_path = pathlib.Path(path_to_dataset)\n",
-    "dataset_info_dict = cdmetadl.helpers.general_helpers.check_datasets(dataset_path, [\"APL\"])\n",
+    "dataset_info_dict = cdmetadl.helpers.general_helpers.check_datasets(dataset_path, [\"CRS\"])\n",
     "\n",
-    "dataset = cdmetadl.dataset.ImageDataset(\"Airplanes\", dataset_info_dict[\"APL\"])"
+    "dataset = cdmetadl.dataset.ImageDataset(\"Cars\", dataset_info_dict[\"CRS\"])"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -53,7 +62,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -70,7 +79,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -102,11 +111,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 23,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "TypeError",
+     "evalue": "GenerativeAugmentation.__init__() got an unexpected keyword argument 'scale'",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mTypeError\u001b[0m                                 Traceback (most recent call last)",
+      "Cell \u001b[0;32mIn[23], line 1\u001b[0m\n\u001b[0;32m----> 1\u001b[0m generative_augmentor \u001b[38;5;241m=\u001b[39m \u001b[43mcdmetadl\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43maugmentation\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mGenerativeAugmentation\u001b[49m\u001b[43m(\u001b[49m\u001b[43mthreshold\u001b[49m\u001b[38;5;241;43m=\u001b[39;49m\u001b[38;5;241;43m0.75\u001b[39;49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mscale\u001b[49m\u001b[38;5;241;43m=\u001b[39;49m\u001b[38;5;241;43m1.0\u001b[39;49m\u001b[43m,\u001b[49m\n\u001b[1;32m      2\u001b[0m \u001b[43m                                                                    \u001b[49m\u001b[43mannotator_type\u001b[49m\u001b[38;5;241;43m=\u001b[39;49m\u001b[38;5;124;43m\"\u001b[39;49m\u001b[38;5;124;43mcanny\u001b[39;49m\u001b[38;5;124;43m\"\u001b[39;49m\u001b[43m,\u001b[49m\n\u001b[1;32m      3\u001b[0m \u001b[43m                                                                        \u001b[49m\u001b[43mkeep_original_data\u001b[49m\u001b[38;5;241;43m=\u001b[39;49m\u001b[38;5;28;43;01mFalse\u001b[39;49;00m\u001b[43m)\u001b[49m\n\u001b[1;32m      5\u001b[0m create_plot(generative_augmentor, task)\n",
+      "\u001b[0;31mTypeError\u001b[0m: GenerativeAugmentation.__init__() got an unexpected keyword argument 'scale'"
+     ]
+    }
+   ],
    "source": [
-    "generative_augmentor = cdmetadl.augmentation.GenerativeAugmentation(threshold=0.75, scale=1.0,\n",
+    "generative_augmentor = cdmetadl.augmentation.GenerativeAugmentation(threshold=0.75, augmentation_size = {}\n",
     "                                                                    annotator_type=\"canny\",\n",
     "                                                                        keep_original_data=False)\n",
     "\n",
@@ -210,7 +231,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.7"
+   "version": "3.11.5"
   }
  },
  "nbformat": 4,
