added commands to scheduler

--- a/cdmetadl/scheduler/CommandBastler.ipynb
+++ b/cdmetadl/scheduler/CommandBastler.ipynb
@@ -2,21 +2,22 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 24,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "CSV file 'scripts.csv' has been created successfully.\n"
+      "CSV file 'scripts1.csv' has been created successfully.\n",
+      "CSV file 'scripts2.csv' has been created successfully.\n"
      ]
     }
    ],
    "source": [
     "import csv\n",
     "\n",
-    "commands = []\n",
+    "train_commands = []\n",
     "\n",
     "base_path = \"/visinf/home/vilab25/Confidence-based-generative-data-Augmentation-for-Meta-Learning\"\n",
     "for mode in [\"run_within_domain\", \"run_cross_domain\"]:\n",
@@ -41,16 +42,28 @@
     "                --log_file /visinf/home/vilab25/logs/train_{mode}_{model}_{dropout_mode}_k_{k}.log\n",
     "                \"\"\"\n",
     "                \n",
-    "                commands.append(cmd_strig)\n",
+    "                train_commands.append(cmd_strig)\n",
     "                \n",
     "                \n",
     "\n",
     "# Write commands to CSV file\n",
-    "csv_file_path = \"scripts.csv\"\n",
+    "csv_file_path = \"scripts1.csv\"\n",
     "with open(csv_file_path, mode='w', newline='') as file:\n",
     "    writer = csv.writer(file)\n",
+    "\n",
     "    writer.writerow([\"ID\", \"command\", \"status\", \"attached to process\", \"attached to gpu\", \"process alive\", \"expected_cpu_usage (in %)\", \"expected_gpu_usage (in MB)\", \"timestamp_started\", \"last_timestamp\"])\n",
-    "    for index, cmd in enumerate(commands, start=1):\n",
+    "    for index, cmd in enumerate(train_commands[::2], start=1):\n",
+    "        writer.writerow([index, cmd, \"waiting\", \" \", \" \", \" \", \"1800\", \"3500\", \" \", \" \"])\n",
+    "\n",
+    "print(f\"CSV file '{csv_file_path}' has been created successfully.\")\n",
+    "\n",
+    "# Write commands to CSV file\n",
+    "csv_file_path = \"scripts2.csv\"\n",
+    "with open(csv_file_path, mode='w', newline='') as file:\n",
+    "    writer = csv.writer(file)\n",
+    "\n",
+    "    writer.writerow([\"ID\", \"command\", \"status\", \"attached to process\", \"attached to gpu\", \"process alive\", \"expected_cpu_usage (in %)\", \"expected_gpu_usage (in MB)\", \"timestamp_started\", \"last_timestamp\"])\n",
+    "    for index, cmd in enumerate(train_commands[1::2], start=1):\n",
     "        writer.writerow([index, cmd, \"waiting\", \" \", \" \", \" \", \"1800\", \"3500\", \" \", \" \"])\n",
     "\n",
     "print(f\"CSV file '{csv_file_path}' has been created successfully.\")"
