startet with yamls for evals

--- a/cdmetadl/scheduler/CommandBastler.ipynb
+++ b/cdmetadl/scheduler/CommandBastler.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
@@ -67,6 +67,129 @@
     "        writer.writerow([index, cmd, \"waiting\", \" \", \" \", \" \", \"1800\", \"3500\", \" \", \" \"])\n",
     "\n",
     "print(f\"CSV file '{csv_file_path}' has been created successfully.\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 30,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def cmd_script_eval(base_path, k, mode, model_type):\n",
+    "    return f\"\"\"{base_path}/scripts/isolated_run.sh \\\n",
+    "            {base_path}/scripts/train/train.sh \\\n",
+    "            --datasets_dir \"/fastdata/vilab24/meta-album\" \\\n",
+    "            --ks \"{k}\" \\\n",
+    "            --{mode} \\\n",
+    "            --model_path \"/fastdata/vilab25/output/scheduler/training/{model_type}\" \\\n",
+    "            --model {model} \\\n",
+    "            --config_path \"configs/eval/standard_augmentation/mc_dropout/standard_augment_mc\" \\\n",
+    "            --output_dir \"/fastdata/vilab25/output/scheduler/eval/\" \\\n",
+    "            --log_file /visinf/home/vilab25/logs/eval_{k}_{model}_{mode}.log\n",
+    "            \"\"\"\n",
+    "    \n",
+    "def yaml_script_eval(k, augmentation_method, confidence_method):\n",
+    "    confidence_estimator_str = {\"baseline\": '\"ConstantConfidenceProvider\"',\n",
+    "                                \"mc_dropout\": '\"MCDropoutConfidenceEstimator\"',\n",
+    "                                \"pseudo_confidence\": '\"PseudoConfidenceEstimator\"',\n",
+    "                                \"gt_confidence\": '\"GTConfidenceEstimator\"'}[confidence_method]\n",
+    "        \n",
+    "    augmentation_method_str = {\"baseline\": 'null',\n",
+    "                                \"generative_augmentation\": '\"GenerativeAugmentation\"',\n",
+    "                                \"pseudo_augmentation\": '\"PseudoAugmentation\"',\n",
+    "                                \"standard_augmentation\": '\"StandardAugmentation\"'}[augmentation_method]\n",
+    "    \n",
+    "    \n",
+    "    return f\"\"\"dataset: \n",
+    "test: \n",
+    "    n_ways:\n",
+    "        value: 5\n",
+    "    k_shots: \n",
+    "        value: {k + 10*(augmentation_method_str == '\"PseudoAugmentation\"')}\n",
+    "    query_size: 20\n",
+    "        \n",
+    "evaluation:\n",
+    "    tasks_per_dataset: 100\n",
+    "    confidence_estimators:\n",
+    "        use: {confidence_estimator_str}\n",
+    "        ConstantConfidenceProvider:\n",
+    "            confidence: {int(augmentation_method_str == 'null')} #1 if augmentation_method = baseline, if conidence_method = \"baseline\" = 0\n",
+    "        PseudoConfidenceEstimator: {\"{}\"}\n",
+    "\t    GTConfidenceEstimator: {\"{}\"} \n",
+    "        MCDropoutConfidenceEstimator:\n",
+    "            num_samples: 100\n",
+    "\n",
+    "    augmentors:\n",
+    "\t    use: {augmentation_method_str}\n",
+    "       \tPseudoAugmentation: \n",
+    "            keep_original_data: True\n",
+    "            augmentation_size: \n",
+    "                scale: 1\n",
+    "                offset: 3 \n",
+    "                maximum: 20\n",
+    "                threshold: 0.8\n",
+    "        StandardAugmentation:\n",
+    "            threshold: 0.75\n",
+    "            scale: 2\n",
+    "            keep_original_data: True\n",
+    "            rotation: 25\n",
+    "            flip: True\n",
+    "        GenerativeAugmentation:\n",
+    "            keep_original_data: True\n",
+    "            augmentation_size: \n",
+    "                scale: 1\n",
+    "                offset: 3 \n",
+    "                maximum: 20\n",
+    "                threshold: 0.8\n",
+    "            annotator_type: \"hed\"\n",
+    "\"\"\""
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 40,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "96"
+      ]
+     },
+     "execution_count": 40,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "eval_commands = []\n",
+    "yaml_scripts = []\n",
+    "base_path = \"/visinf/home/vilab25/Confidence-based-generative-data-Augmentation-for-Meta-Learning\"\n",
+    "\n",
+    "for k in [1, 5, 10]:\n",
+    "    for model in [\"finetuning\", \"maml\"]:\n",
+    "        for mode in [\"run_within_domain\", \"run_cross_domain\"]:\n",
+    "            for model_type in [\"baseline\", \"dropout\"]:\n",
+    "\n",
+    "                confidence_methods = [\"baseline\", \"mc_dropout\", \"pseudo_confidence\", \"gt_confidence\"]\n",
+    "            \n",
+    "                if model_type == \"baseline\":\n",
+    "                    confidence_methods = [\"baseline\", \"pseudo_confidence\", \"gt_confidence\"]\n",
+    "                          \n",
+    "                elif model_type == \"dropout\":\n",
+    "                    confidence_methods = [\"mc_dropout\"]\n",
+    "\n",
+    "                for augmentation_method in [\"baseline\", \"generative_augmentation\", \"pseudo_augmentation\", \"standard_augmentation\"]:\n",
+    "                    \n",
+    "                    if augmentation_method == \"baseline\":\n",
+    "                        confidence_methods = [\"baseline\"]\n",
+    "                                                                                       \n",
+    "                    \n",
+    "                    for confidence_method in confidence_methods:\n",
+    "                        eval_commands.append(cmd_script_eval(base_path, k, mode, model_type))\n",
+    "                        yaml_scripts.append(f\"{k},{model},{mode},{model_type}\"+yaml_script_eval(k, augmentation_method, confidence_method))\n",
+    "                                             \n",
+    "len(eval_commands)"
    ]
   }
  ],
