--- a/cdmetadl/scheduler/CommandBastler.ipynb
+++ b/cdmetadl/scheduler/CommandBastler.ipynb
@@ -71,7 +71,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -91,7 +91,6 @@
     "def yaml_script_eval(k, augmentation_method, confidence_method):\n",
     "    confidence_estimator_str = {\"baseline\": '\"ConstantConfidenceProvider\"',\n",
     "                                \"mc_dropout\": '\"MCDropoutConfidenceEstimator\"',\n",
-    "                                \"pseudo_confidence\": '\"PseudoConfidenceEstimator\"',\n",
     "                                \"gt_confidence\": '\"GTConfidenceEstimator\"'}[confidence_method]\n",
     "        \n",
     "    augmentation_method_str = {\"baseline\": 'null',\n",
@@ -114,7 +113,6 @@
     "        use: {confidence_estimator_str}\n",
     "        ConstantConfidenceProvider:\n",
     "            confidence: {int(augmentation_method_str == 'null')} #1 if augmentation_method = baseline, if conidence_method = \"baseline\" = 0\n",
-    "        PseudoConfidenceEstimator: {\"{}\"}\n",
     "\t    GTConfidenceEstimator: {\"{}\"} \n",
     "        MCDropoutConfidenceEstimator:\n",
     "            num_samples: 100\n",
@@ -147,16 +145,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "96"
+       "72"
       ]
      },
-     "execution_count": 40,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -170,16 +168,14 @@
     "    for model in [\"finetuning\", \"maml\"]:\n",
     "        for mode in [\"run_within_domain\", \"run_cross_domain\"]:\n",
     "            for model_type in [\"baseline\", \"dropout\"]:\n",
-    "\n",
-    "                confidence_methods = [\"baseline\", \"mc_dropout\", \"pseudo_confidence\", \"gt_confidence\"]\n",
     "            \n",
     "                if model_type == \"baseline\":\n",
-    "                    confidence_methods = [\"baseline\", \"pseudo_confidence\", \"gt_confidence\"]\n",
+    "                    confidence_methods = [\"baseline\"]\n",
     "                          \n",
     "                elif model_type == \"dropout\":\n",
-    "                    confidence_methods = [\"mc_dropout\"]\n",
+    "                    confidence_methods = [\"baseline\", \"mc_dropout\"]\n",
     "\n",
-    "                for augmentation_method in [\"baseline\", \"generative_augmentation\", \"pseudo_augmentation\", \"standard_augmentation\"]:\n",
+    "                for augmentation_method in [\"baseline\", \"generative_augmentation\", \"standard_augmentation\"]:\n",
     "                    \n",
     "                    if augmentation_method == \"baseline\":\n",
     "                        confidence_methods = [\"baseline\"]\n",
@@ -190,6 +186,143 @@
     "                        yaml_scripts.append(f\"{k},{model},{mode},{model_type}\"+yaml_script_eval(k, augmentation_method, confidence_method))\n",
     "                                             \n",
     "len(eval_commands)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 28,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Selected Config\n",
+      "('baseline', 'baseline', 'baseline')\n",
+      "('dropout', 'baseline', 'baseline')\n",
+      "('dropout', 'baseline', 'standard_aug')\n",
+      "('dropout', 'baseline', 'gen_aug')\n",
+      "('dropout', 'baseline', 'pseudo_aug')\n",
+      "('dropout', 'mc', 'standard_aug')\n",
+      "('dropout', 'mc', 'gen_aug')\n",
+      "('dropout', 'mc', 'pseudo_aug')\n",
+      "('dropout', 'gt', 'standard_aug')\n",
+      "('dropout', 'gt', 'gen_aug')\n",
+      "('dropout', 'gt', 'pseudo_aug')\n",
+      "11\n",
+      "Ignored Config\n",
+      "('baseline', 'baseline', 'standard_aug')\n",
+      "('baseline', 'baseline', 'gen_aug')\n",
+      "('baseline', 'baseline', 'pseudo_aug')\n",
+      "('baseline', 'mc', 'baseline')\n",
+      "('baseline', 'mc', 'standard_aug')\n",
+      "('baseline', 'mc', 'gen_aug')\n",
+      "('baseline', 'mc', 'pseudo_aug')\n",
+      "('baseline', 'gt', 'baseline')\n",
+      "('baseline', 'gt', 'standard_aug')\n",
+      "('baseline', 'gt', 'gen_aug')\n",
+      "('baseline', 'gt', 'pseudo_aug')\n",
+      "('dropout', 'mc', 'baseline')\n",
+      "('dropout', 'gt', 'baseline')\n",
+      "13\n"
+     ]
+    }
+   ],
+   "source": [
+    "import itertools\n",
+    "\n",
+    "model_type = [\"baseline\", \"dropout\"]\n",
+    "confidence_method = [\"baseline\", \"mc\", \"gt\"]\n",
+    "data_aug = [\"baseline\", \"standard_aug\", \"gen_aug\", \"pseudo_aug\"]\n",
+    "\n",
+    "ignored_config = []\n",
+    "configs = []\n",
+    "for config in itertools.product(model_type, confidence_method, data_aug):\n",
+    "    match config:\n",
+    "        case (\"baseline\", \"baseline\", \"baseline\"): \n",
+    "            configs.append(config)\n",
+    "        case (\"baseline\", _, _): \n",
+    "            ignored_config.append(config)\n",
+    "        case (\"dropout\", \"baseline\", _):\n",
+    "            configs.append(config)\n",
+    "        case (\"dropout\", _, \"baseline\"):\n",
+    "            ignored_config.append(config)\n",
+    "        case (\"dropout\", \"mc\" | \"gt\", _):\n",
+    "            configs.append(config)       \n",
+    "        case _:\n",
+    "            print(config)\n",
+    "\n",
+    "print(\"Selected Config\")\n",
+    "for config in configs:\n",
+    "    print(config)\n",
+    "\n",
+    "print(len(configs))\n",
+    "\n",
+    "print(\"Ignored Config\")\n",
+    "for config in ignored_config:\n",
+    "    print(config)\n",
+    "    \n",
+    "print(len(ignored_config))\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 23,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "12"
+      ]
+     },
+     "execution_count": 23,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "len(base_product)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 24,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "24"
+      ]
+     },
+     "execution_count": 24,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "len(config_specific_product)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 25,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "288"
+      ]
+     },
+     "execution_count": 25,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "len(total_product)"
    ]
   }
  ],
